# esketit_knit

./: .env  .gitignore  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-1c4127dcf5bb24985dd212905cdbb35f5730e7ec66b21c521711be795a46a5da.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 01_create_tables.sql  02_insert_data.sql  02_insert_data.sql.old  03_blueprint_tables.sql  04_add_fitted_types.sql  06_add_sleeve_type.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/algorhytms/: convert_to_txt.rs  mod.rs
src-tauri/src/blueprint/: calculator.rs  mod.rs  traits.rs  types.rs
src-tauri/src/blueprint/parts/: armhole.rs  hem.rs  mod.rs  neckline.rs  point_builder.rs  waist.rs
src-tauri/src/blueprint/sleeves/: mod.rs  raglan.rs  set_in.rs
src-tauri/src/commands/: blueprint.rs  file_system.rs  garment.rs  http_server.rs  mod.rs  project.rs  tcp.rs  theme_command.rs  window_command.rs
src-tauri/src/config/: app_config.rs  mod.rs
src-tauri/src/database/: init_db.rs  mod.rs  seed.rs
src-tauri/src/state/: mod.rs  theme_state.rs  window_state.rs
src-tauri/src/utilities/: knit_pattern.rs  mod.rs
src/BlueprintsTab/: BlueprintsTab.css  BlueprintsTab.jsx
src/CreateProject/: CreateProject.css  CreateProject.jsx
src/FileTree/: FileManagerTheme.css  README.md
src/ImageConverter/: ImageConverter.css  ImageConverter.jsx
src/KnittingTab/: KnittingTab.css  KnittingTab.jsx
src/Modal/: Modal.jsx
src/OpenProject/: OpenProject.css  OpenProject.jsx
(+18 files in other folders)
