[package]
name = "esketitknit_v01"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "esketitknit_v01_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
sqlx = "0.8.6"
quick-xml = "0.39.2"
chrono = "0.4.44"
image = "0.25.10"
tokio = { version = "1.50.0", features = ["full"] }
tempfile = "3.27.0"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
get_if_addrs = "0.5.3"
once_cell = "1.21"
bytes = "1.11.1"

